[workspace]
members = [
    ".",
    "lisp_macro"
]

[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-ask", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elm_rs = "0.2.2"
nom = "7.1.3"
inventory = "0.3"
lisp_macro = { path = "./lisp_macro" }
nom_locate = "4.2.0"
truck-polymesh = "0.6.0"
truck-modeling = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
