[workspace]
members = [
    ".",
    "lisp_macro"
]

[package]
name = "daccad"
version = "0.0.0"
description = "A CAD software for myself"
authors = ["tsukimizake"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elm_rs = "0.2.2"
nom = "7.1.3"
inventory = "0.3"
lisp_macro = { path = "./lisp_macro" }
nom_locate = "4.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

truck-polymesh = { path = "/Users/tsukimizake/truck/truck-polymesh/" }
truck-modeling = { path = "/Users/tsukimizake/truck/truck-modeling/" }
truck-meshalgo = { path = "/Users/tsukimizake/truck/truck-meshalgo/" }
truck-topology = { path = "/Users/tsukimizake/truck/truck-topology/" }
truck-shapeops = { path = "/Users/tsukimizake/truck/truck-shapeops/" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
